--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,19 @@
     font-family: "Poppins", "sans-serif";
     font-size: 16px;
 }
+
+.col-sm-7{
+    text-align: center;
+    padding: 2rem 8rem 5rem 8rem
+
+}
+
+.col-sm-5{
+    text-align: center;
+}
+
+.col-lg-7{
+    background: #f3f6;
+
+}
+
