--- a/css/style.css
+++ b/css/style.css
@@ -3,23 +3,65 @@
     padding: 0;
 }
 
+body{
+    
+    background-image:url("../images/desktop.png");
+}
+
 .container{
     font-family: "Poppins", "sans-serif";
     font-size: 16px;
+    border: 1px solid yellow;
 }
 
-.col-sm-7{
+.col-sm-12{
     text-align: center;
-    padding: 2rem 8rem 5rem 8rem
-
+    padding: 5rem 8rem 2rem 8rem;
+    align-items: center;
+    border: 1px solid green;
 }
 
-.col-sm-5{
-    text-align: center;
+.btn{
+    margin-bottom: 2rem;
+    width: 100%;
+    background: hsl(248, 32%, 49%);
+    color: #fff;
 }
 
-.col-lg-7{
-    background: #f3f6;
-
+.submit{
+    width: 100%;
+    background: hsl(154, 59%, 51%);
+    color: #fff;
+    
 }
 
+#text-right{
+    padding-top: 10rem;
+}
+
+.formulario{
+    background: #817f7f;
+    padding: 1rem 1rem 3rem 1rem;
+    border-radius: 1rem;
+}
+
+footer{
+    font-size: 10px;
+}
+
+@media screen and (max-width: 375px){
+    .col-md-7{
+        padding: 0 5rem;
+        border: 1px solid red;
+    }
+
+    .col-md-5{
+        padding: 0;
+        border: 1px solid red;
+    
+    }
+
+    #text-right{
+        padding: 1rem 5rem;
+    }
+}
