--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,11 @@ a{
     text-decoration: none;
 }
 
+span{
+    font-weight: bold;
+    font-size: 15px;
+}
+
 @media screen and (max-width: 500px){
 
     h1{
