--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,6 @@ body{
     font-size: 16px;
 }
 
-/*.col-sm-12{
-    text-align: center;
-    padding: 5rem 8rem 2rem 8rem;
-    align-items: center;
-    border: 1px solid green;
-}*/
-
 .part1{
     text-align: center;
     margin-top: 3rem;
@@ -29,7 +22,7 @@ body{
 }
 
 .part2{
-    margin-top: 2rem;
+    margin-top: 1rem;
     text-align: center;
     padding: 2rem 8rem 2rem 8rem;
     align-items: center;
@@ -44,18 +37,25 @@ body{
     color: #fff;
     border-radius: 0.5rem;
     border: none;
+    text-shadow: none;
 }
 
 .botao:hover{
+    background: hsl(248, 54%, 63%);
+}
+button.botao span:hover{
     background: hsl(248, 54%, 63%);
 }
 
 
 .submit{
     width: 100%;
+    padding: 0.5rem;
     background: hsl(154, 59%, 51%);
     color: #fff;
     border: none;
+    margin-bottom: 1rem;
+    border-radius: 1rem;
 }
 
 .submit:hover{
@@ -73,12 +73,12 @@ background: hsl(154, 79%, 63%);
 .formulario{
     width: 100%;
     background: #fff;
-    padding: 1rem 1rem 3rem 1rem;
+    padding: 1rem 1rem 2rem 1rem;
     border-radius: 1rem;
 }
 
 footer{
-    font-size: 10px;
+    font-size: 0.6rem;
 }
 
 h1{
@@ -96,7 +96,7 @@ p{
 
 ::placeholder{
     font-weight: bold;
-    font-size: 10px;
+    font-size: 0.6rem;
 }
 
 a{
@@ -105,32 +105,66 @@ a{
     text-decoration: none;
 }
 
-span{
-    font-weight: bold;
-    font-size: 15px;
-}
-
-.input-container{
+.form-control {
+    align-items: center;
+    margin-bottom: 0.6rem;
+    padding-bottom: 1.8rem;
     position: relative;
+    border: none;
+}
+
+.form-control input {
+    border: 2px solid #f0f0f0;
     display: block;
-}
-i{
-    position: absolute; 
-    top: 15%;
-    left: 90%;
+    border-radius: 0.3rem;
+    font-size: 0.8rem;
+    width: 100%;
+    padding: 0.6rem;
+    outline-color: hsl(246, 25%, 77%);
     
-}
+  }
 
-small{
-    position: relative; 
-    top: 15%;
-    left: 25%;
-    font-size: 10px;
+  .form-control i {
+    position: absolute;
+    top: 1.25rem;
+    right: 1.12rem;
+    visibility: hidden;
+  }
+  
+  .form-control small {
+    position: absolute;
+    width: 100%;
+    left: 0.06rem;
+    font-size: 0.75rem;
     font-style: italic;
-    color: hsl(0, 91%, 46%);
-}
+    visibility: hidden;
+    
+  }
 
+/*estilo de success e error*/
 
+.form-control.success input {
+    border-color: #2ecc71;
+  }
+  
+  .form-control.error input {
+    border-color: #e74c3c;
+  }
+  
+  .form-control.success i.fa-circle-check{
+    color: #2ecc71;
+    visibility: visible;
+  }
+  
+  .form-control.error i.fa-circle-exclamation {
+    color: #e74c3c;
+    visibility: visible;
+  }
+  
+  .form-control.error small {
+    visibility: visible;
+    color: #e74c3c;
+  }
 
 @media screen and (max-width: 500px){
 
@@ -146,32 +180,3 @@ small{
     }
 
 }
-
-/*
-@media screen and (max-width: 375px){
-    .col-md-7{
-        padding: 0 5rem;
-        border: 1px solid red;
-    }
-
-    .col-md-5{
-        padding: 0;
-        border: 1px solid red;
-    
-    }
-
-    #text-right{
-        padding: 1rem 5rem;
-    }
-
-
-
-        font-size: 10px;
-    font-style: italic;
-    color: hsl(0, 91%, 46%);
-    margin-bottom: 10px;
-    width: 50%;
-    display: flex;
-    width: 40%;
-    margin-left: 230px;
-}*/
